--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 
 
 # spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console = true
 
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:./betodb;
-
-
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+
 
 # Configuraci?n de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -18,7 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql = true
 # puerto de ejecuci?n
-server.port=8080
+#server.port=8080
 
 
 # OPEN API
